// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextareaField component renders 1`] = `
.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--space-2);
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxduzhy {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  color: var(--colors-tonal900);
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  line-height: 1.4;
  min-height: var(--sizes-6);
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: calc(var(--space-2) + var(--space-1));
  padding-bottom: calc(var(--space-2) + var(--space-1));
  resize: vertical;
  transition: all 75ms ease-out;
  width: 100%;
}

.sxduzhy:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sxduzhy[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
}

<div>
  <div
    class="sx03kze"
  >
    <div
      class="sx2cs53 sx2cs53-re4mk"
    >
      <label
        class="sxdiu5c sxdiu5cjqqvr--size-md"
        for="description"
      />
    </div>
    <textarea
      class="sxduzhy"
      id="description"
      name="description"
    />
  </div>
</div>
`;

exports[`TextareaField component renders with an error 1`] = `
.sx2cs53 {
  display: flex;
}

.sx2cs53-re4mk {
  justify-content: space-between;
  align-items: center;
  margin-bottom: var(--space-2);
}

.sxfey5o {
  color: var(--colors-tonal900);
  font-family: var(--fonts-sans);
  font-weight: 400;
  margin: 0;
}

.sxfey5oxzxpn--size-sm {
  font-size: var(--fontSizes-sm);
  line-height: 1.69;
}

.sxfey5oxzxpn--size-sm::before {
  content: '';
  margin-bottom: -0.477em;
  display: table;
}

.sxfey5oxzxpn--size-sm::after {
  content: '';
  margin-top: -0.477em;
  display: table;
}

.sxfey5o-m6cy5 {
  color: var(--colors-danger);
  margin-top: var(--space-1);
}

.sxdiu5c {
  color: var(--colors-secondary300);
  display: block;
  font-family: var(--fonts-sans);
  font-weight: 500;
  margin: 0;
}

.sxdiu5cjqqvr--size-md {
  font-size: var(--fontSizes-md);
  line-height: 1.625;
}

.sxdiu5cjqqvr--size-md::before {
  content: '';
  margin-bottom: -0.4489em;
  display: table;
}

.sxdiu5cjqqvr--size-md::after {
  content: '';
  margin-top: -0.4489em;
  display: table;
}

.sxduzhy {
  -webkit-appearance: none;
  appearance: none;
  border: 1px solid var(--colors-tonal500);
  border-radius: var(--radii-0);
  box-shadow: none;
  color: var(--colors-tonal900);
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 400;
  line-height: 1.4;
  min-height: var(--sizes-6);
  padding-left: var(--space-3);
  padding-right: var(--space-3);
  padding-top: calc(var(--space-2) + var(--space-1));
  padding-bottom: calc(var(--space-2) + var(--space-1));
  resize: vertical;
  transition: all 75ms ease-out;
  width: 100%;
}

.sxduzhy:focus {
  border-color: var(--colors-primary900);
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
  outline: none;
}

.sxduzhy[disabled] {
  opacity: 0.7;
  background-color: var(--colors-tonal300);
}

<div>
  <div
    class="sx03kze"
  >
    <div
      class="sx2cs53 sx2cs53-re4mk"
    >
      <label
        class="sxdiu5c sxdiu5cjqqvr--size-md"
        for="description"
      />
    </div>
    <textarea
      class="sxduzhy"
      id="description"
      name="description"
      state="error"
    />
    <p
      class="sxfey5o sxfey5oxzxpn--size-sm sxfey5o-m6cy5"
    >
      Error Message
    </p>
  </div>
</div>
`;
